--- a/configuration-management/components/overlays/cluster-st/ns-env-3/kustomization.yaml
+++ b/configuration-management/components/overlays/cluster-st/ns-env-3/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../../../base
+namespace: ns-env-3
 configMapGenerator:
 - envs:
   - configs/app-envs.env
@@ -9,3 +10,5 @@ configMapGenerator:
 - files:
   - configs/app-configs
   name: app-configs
+components:
+  - ../../../components/cluster-st
