--- a/configuration-management/dir-path/overlays/cluster-st/ns-env-3/kustomization.yaml
+++ b/configuration-management/dir-path/overlays/cluster-st/ns-env-3/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../../../base
+namespace: ns-env-3
 configMapGenerator:
 - envs:
   - configs/app-envs.env
