ArgoCD リソースの Namespace を修正

--- a/configuration-management/components/argocd/argocd.yaml
+++ b/configuration-management/components/argocd/argocd.yaml
@@ -2,7 +2,7 @@ kind: ArgoCD
 apiVersion: argoproj.io/v1beta1
 metadata:
   name: argocd
-  namespace: gitops-demo
+  namespace: gitops-test
 spec:
   controller:
     resources:
