--- a/configuration-management/components/components/cluster-prod/kustomization.yaml
+++ b/configuration-management/components/components/cluster-prod/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
+# configs 配下のファイルから ConfigMap を作成する
 configMapGenerator:
 - envs:
   - configs/cluster-envs.env
