--- a/configuration-management/dir-path/overlays/cluster-prod/ns-env-prod/kustomization.yaml
+++ b/configuration-management/dir-path/overlays/cluster-prod/ns-env-prod/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
 - ../../../base
 namespace: ns-env-prod
+# configs 配下のファイルから ConfigMap を作成する
 configMapGenerator:
 - envs:
   - configs/app-envs.env
